--- a/styles/app/application.less
+++ b/styles/app/application.less
@@ -1,4 +1,8 @@
 /* Main Tags */
+body {
+  height: 100%;
+}
+
 a{
   text-decoration: none;
   color: @blue;
@@ -14,5 +18,31 @@ a{
 }
 
 .main {
-  padding: 40px;
+  margin: auto;
+  margin-top: 100px;
+  margin-bottom: 30px;
+}
+
+header {
+  text-align: center;
+  background-color: black;
+  color: white;
+  padding: 12px;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: black;
+  text-align: center;
+  z-index: 1000;
+  button {
+    margin: 4px auto;
+    text-align: center;
+  }
 }
