Progress bars, need to be wired up

--- a/styles/app/application.less
+++ b/styles/app/application.less
@@ -17,12 +17,6 @@ a{
   }
 }
 
-.main {
-  margin: auto;
-  margin-top: 100px;
-  margin-bottom: 30px;
-}
-
 header {
   text-align: center;
   background-color: black;
@@ -45,4 +39,23 @@ footer {
     margin: 4px auto;
     text-align: center;
   }
+}
+
+.character-block {
+  width: 100%;
+  margin: 12px;
+}
+
+.main {
+  margin: auto;
+  margin-top: 100px;
+  margin-bottom: 30px;
+}
+
+.damage-taken {
+  color: red;
+}
+
+.damage-dealt {
+  color: blue;
 }
