--- a/styles/app.css
+++ b/styles/app.css
@@ -18,11 +18,6 @@ a:active {
   color: #f1c40f;
   text-decoration: none;
 }
-.main {
-  margin: auto;
-  margin-top: 100px;
-  margin-bottom: 30px;
-}
 header {
   text-align: center;
   background-color: black;
@@ -44,4 +39,19 @@ footer {
 footer button {
   margin: 4px auto;
   text-align: center;
+}
+.character-block {
+  width: 100%;
+  margin: 12px;
+}
+.main {
+  margin: auto;
+  margin-top: 100px;
+  margin-bottom: 30px;
+}
+.damage-taken {
+  color: red;
+}
+.damage-dealt {
+  color: blue;
 }
